fix: API regression on adding attributes on oclass(#431) (#432)
